# kolibrios

./: .asm-lsp.toml  .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PCIDEV.ASM  README.md  build.txt  pci32.inc  roadmap.cp1251.txt  roadmap.txt  test.tmp  tup.config.template  vendors.inc
.gitea/utils/: check-kernel-codestyle.py  sync-tup-ctime.py
.gitea/workflows/: build.yaml  check-kernel.py  checker.pl  install_kgcc  kernel-check.yaml  pr-test.yaml  restore-mtime.pl  restore-mtime.py  submodule-bump.yaml  submodule-kterm.yaml  sync-tup-ctime.py
_tools/: cleanup.py  get_started.py
_tools/lib/: builds.py  constants.py  logging.py  makeflop.py  network.py  platform.py  tupfile_parser.py
_tools/workspace/: build.py  run.py
contrib/C_Layer/: Doxyfile  Makefile  README  README.md
contrib/kolibri-libc/: .gitignore  README.md  SYMBOLS.md  compile_flags.txt  static.lds
contrib/menuetlibc/: Makefile
contrib/sdk/sources/Mesa/mesa-10.6.0/src/gallium/auxiliary/pipe-loader/: Makefile.am  Makefile.in  Makefile.sources  pipe_loader.h  pipe_loader_sw.c
contrib/sdk/sources/Mesa/mesa-10.6.0/src/gallium/drivers/radeon/: Makefile.am  Makefile.in  Makefile.sources  cayman_msaa.c  r600_buffer_common.c  r600_cs.h  r600_gpu_load.c  r600_pipe_common.c  r600_pipe_common.h  r600_query.c  r600_streamout.c  r600_texture.c  r600d_common.h  radeon_elf_util.c  radeon_elf_util.h  radeon_llvm.h  radeon_llvm_emit.c  radeon_llvm_emit.h  radeon_llvm_util.c  radeon_llvm_util.h  radeon_setup_tgsi_llvm.c  radeon_uvd.c  radeon_uvd.h  radeon_vce.c  radeon_vce.h  radeon_vce_40_2_2.c  radeon_video.c  radeon_video.h  radeon_winsys.h
contrib/sdk/sources/Mesa/mesa-10.6.0/src/gallium/targets/d3dadapter9/: Makefile.am  Makefile.in  d3d.pc.in  drm.c  getproc.c
contrib/sdk/sources/Mesa/mesa-10.6.0/src/gallium/targets/va/: Makefile.am  Makefile.in
data/: Tupfile.lua  generate_makefile_skins.sh
data/Vortex86MX-eng/: Makefile  Makefile.fasm  Makefile.gcc  asciivju  default.skn  doexe2.asm
data/ca/: tup.config
data/ca_ES/: lang.inc
data/common/: Makefile.cmm  Makefile.copy  Makefile.fasm  Makefile.gcc  Makefile.main  Makefile.msvc  Makefile.nasm  Makefile.pestrip  RUN  allgames  default.skn  fb2read  font_viewer  game_center  hdread  index_htm  kerpack  kfviewer  kuzkina.mid  pestrip.asm
data/en_US/: Tupfile.lua  lang.inc  tup.config  welcome.htm
data/eng/: @notify  ICON.INI  Makefile  Makefile.cmm  Makefile.fasm  RUN  default.skn  htmlv  kolibri.lbl  lang.inc  lang_nasm.inc  network.ini  panel.ini
data/es_ES/: lang.inc  welcome.htm
data/et/: Makefile  Makefile.cmm  Makefile.fasm  Makefile.nasm  Makefile.pestrip  default.skn  icon.ini  index_htm  keymap.key  kolibri.lbl  lang.inc  lang.ini  lang_nasm.inc  tup.config  vmode
data/et_EE/: lang.inc
data/it/: Makefile  RUN  icon.ini  kolibri.lbl  lang.inc  lang_nasm.inc  tup.config
data/it_IT/: lang.inc
data/new-stack/: @panel  Makefile  Makefile.cmm  Makefile.fasm  panel.ini
data/ru_RU/: lang.inc  welcome.htm
data/rus/: Makefile  Makefile.cmm  Makefile.fasm  Makefile.nasm  RUN  default.skn  e80  graph  hdread  icon.ini  kolibri.lbl  kpack  lang_nasm.inc  mykey  panel.ini  pipetka  shell  spanel  table  test  tup.config
data/sp/: Makefile  Makefile.cmm  Makefile.copy  Makefile.fasm  Makefile.pestrip  RUN  icon.ini  kolibri.lbl  lang.ini  lang_nasm.inc  panel.ini  tup.config
drivers/: Tupfile.lua  fdo.inc  imports.inc  kglobals.inc  macros.inc  mii.inc  netdrv.inc  netdrv_pe.inc  pci.inc  pci_pe.inc  peimport.inc  proc32.inc  sceletone.asm
drivers/a5536/: geode.asm  geode.bat  pci.h
drivers/acpi/: Makefile  acpi  acpi.c  acpi.lds  boot.c  bus.c  tables.c
drivers/audio/: ac97.asm  cmi8738.asm  codec.inc  emu10k1x.asm  es1371.asm  fm801.asm  intelac97.asm  sis.asm  sound.asm  vt823x.asm
drivers/bus/: cardbus.asm
drivers/ddk/: Makefile  Tupfile.lua  core.S
drivers/devman/: Makefile  Tupfile.lua  acpi.asm  acpi.c  acpi_bus.h  dmdev.h  pci_bind.c  pci_irq.c  pci_root.c  scan.c  scan.cc
drivers/disk/: Tupfile.lua  tmpdisk.asm  tmpdisk_fat.inc  tmpdisk_work.inc  virt_disk.asm
drivers/ethernet/: 3c59x.asm  R6040.asm  RTL8029.asm  RTL8139.asm  RTL8169.asm  Tupfile.lua  ar81xx.asm  ar81xx.inc  bcm57xx.asm  dec21x4x.asm  forcedeth.asm  i8254x.asm  i8255x.asm  mtd80x.asm  pcnet32.asm  rhine.asm  sis900.asm
drivers/gpio/: 86duino-gpio.asm
drivers/include/: ddk.h  display.h  pci.h  syscall.h  types.h
drivers/mouse/: Tupfile.lua  commouse.asm
drivers/old/: ati2d.asm  uart.asm
drivers/sdhci/: sdhci.sys
drivers/sensors/: amd_nb.c  cpu_detect.c  e_msr.c  pci.c
drivers/serial/: Tupfile.lua  common.inc  install.sh  ring_buf.inc  serial.asm  uart16550.inc
drivers/sisnbook/: codec.inc  sis.asm
drivers/unfinished/: agp.asm  bcm57xx.asm  cardbus.asm  ensoniq.asm
drivers/usb/: ehci.asm  ehci_scheduler.inc  ohci.asm  uhci.asm  usb1_scheduler.inc  usbstor.asm
drivers/video/: README.md  clgd54xx.asm  kms.asm  rdc.asm  s3vid.asm  vesa20.asm  vidintel.asm
kernel/branches/: README.TXT  data32.inc  fdo.inc  imports.inc  init.inc  (+4 more)
programs/: KOSfuncs.inc  build_all.bat  config.inc  debug-fdo.inc  debug.inc  dll.inc  encoding.inc  gui_patterns.inc  if.inc  kglobals.inc  load_img.inc  load_lib.mac  macros.inc  network.inc  notify.inc  shell.inc  string.inc  use_fasm.lua  use_gcc.lua  use_menuetlibc.lua  use_msvc.lua  use_newlib.lua  use_ob07.lua  use_sdl.lua  use_sdl_newlib.lua  use_sound.lua  use_tcc.lua  use_tinygl.lua
programs/emulator/dgen-sdl-1.33/cyclone/: Cyclone.dsp  Cyclone.dsw  Cyclone.h  DoClean.bat  Ea.cpp  Main.cpp  Makefile  Makefile.am  Makefile.in  OpAny.cpp  OpArith.cpp  OpBranch.cpp  OpLogic.cpp  OpMove.cpp  app.h  config.h
programs/emulator/dgen-sdl-1.33/cyclone/Disa/: Disa.c
programs/games/pig/: AUTHORS  ChangeLog  INSTRUCTIONS  configure  configure.in  engine.c  pig-linux-x86
programs/games/pig/trunk/: Makefile.am  Makefile.in  README  aclocal.m4  dirty.c  dirty.h  dirtyrects.txt  engine.h  pig.c
skins/: authors.txt  skinlist.lua
trunk/: build_en.bat  memmap.inc
(+21108 files in other folders)
